[package]
name = "owo69"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.10", features = ["string", "cargo"] }
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"
text_io = "0.1.12"
serde = { version = "1.0.193", features = ["derive"] }
indicatif = "0.17.7"
boolvec = "0.2.6"
toml = "0.8.8"
xz = { version = "0.1.0", features = ["tokio"] }
